--- a/style.css
+++ b/style.css
@@ -1,7 +1,62 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: fantasy;
     margin: 0;
+    padding: 50px 0px 0px 0px;
+    height: 100vh;
     text-align: center;
+    color: whitesmoke;
+    background-color: rgb(29, 28, 28);
+    display: flex;
+    flex-direction: column;
+    flex: auto;
+}
+
+.logo {
+    flex: auto;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.body-columns {
+    display: flex;
+    flex-direction: row;
+    flex: auto;
+}
+
+.left-side {
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 0px 0px 80px;
+}
+
+.play {
+    padding: 8px;
+    background-color: silver;
+    border: 3px solid greenyellow;
+}
+
+div.left-side div {
+    flex: auto;
+    font-size: 5vw;
+    padding: 10px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav {
+    flex: auto;
+    padding: 10px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-side {
+    flex: auto;
+    padding: 0px 100px 0px 0px;
 }
 
 ul {
@@ -12,4 +67,20 @@ li {
     list-style: none;
     flex-direction: row;
     flex: auto;
+}
+a {
+    text-decoration: none;
+    font-family: sans-serif;
+    font-weight: bold;
+    color: rgb(29, 28, 28);
+}
+
+footer {
+    flex: auto;
+    width: 100vw;
+    height: 50px;
+    font-family: sans-serif;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
